--- a/style.scss
+++ b/style.scss
@@ -304,3 +304,11 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 /* Checkout */
+
+/* My Account */
+.cabinet .woocommerce {
+  grid-gap: 48px;
+  grid-template-columns: 260px 1fr;
+  margin-top: 32px;
+  display: grid;
+}
