--- a/style.scss
+++ b/style.scss
@@ -306,9 +306,16 @@ input[type="checkbox"], input[type="radio"] {
 /* Checkout */
 
 /* My Account */
+
 .cabinet .woocommerce {
   grid-gap: 48px;
   grid-template-columns: 260px 1fr;
   margin-top: 32px;
   display: grid;
 }
+
+.cabinet .cabinet_content .title {
+  margin-top: 0;
+}
+
+/* My Account */
