--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,16 @@ input[type="checkbox"], input[type="radio"] {
   appearance: auto;
 }
 
+.hidden {
+  display: none;
+}
+
+.clear {
+  content: "";
+  display: block;
+  clear: both;
+}
+
 /*
  * Default WP Alignment Classes
  *****************************************************************************/
@@ -200,6 +210,15 @@ input[type="checkbox"], input[type="radio"] {
   cursor: pointer;
 }
 
+.modal .errors_wrapper {
+  display: none;
+}
+
+.modal .errors_wrapper.error {
+  display: block;
+  color: red;
+}
+
 /* Modals */
 
 /* Cart */
@@ -303,7 +322,35 @@ input[type="checkbox"], input[type="radio"] {
   position: relative;
 }
 
+.checkout .wc_payment_method label {
+  display: none;
+}
+
 /* Checkout */
+
+/* Payment */
+
+#payment fieldset {
+  border: none;
+}
+
+#payment .payment_method_stripe .form-row-first {
+  width: 45%;
+  float: left;
+  margin-right: 5%;
+}
+
+#payment .payment_method_stripe .form-row-last {
+  width: 45%;
+  float: left;
+  margin-left: 5%;
+}
+
+#payment .wc-stripe-elements-field.invalid {
+  border-color: red;
+}
+
+/* Payment */
 
 /* My Account */
 
