--- a/style.css
+++ b/style.css
@@ -252,21 +252,21 @@ input[type=checkbox], input[type=radio] {
   display: none;
 }
 
-.checkout .select2-selection {
+.select2-container .select2-selection--single {
   height: var(--select_height);
 }
 
-.checkout .select2-container .select2-selection--single .select2-selection__rendered {
+.select2-container .select2-selection--single .select2-selection__rendered {
   line-height: var(--select_height);
   padding: 0 var(--selcet_inner_r) 0 var(--selcet_inner_l);
 }
 
-.checkout .select2-container--default .select2-selection--single .select2-selection__arrow {
+.select2-container--default .select2-selection--single .select2-selection__arrow {
   height: 100%;
   right: 16px;
 }
 
-.checkout .select2-results__option[aria-selected], .select2-results__option[data-selected] {
+.select2-results__option[aria-selected], .select2-results__option[data-selected] {
   overflow: hidden;
   padding: 6px var(--selcet_inner_r) 6px var(--selcet_inner_l);
   white-space: nowrap;
@@ -274,7 +274,7 @@ input[type=checkbox], input[type=radio] {
   transition: background-color 0.23s, color 0.23s;
 }
 
-.checkout .select2-search--dropdown .select2-search__field {
+.select2-search--dropdown .select2-search__field {
   padding: 0 16px;
 }
 
