live chart filter done; fixed metal top dynamic panel

--- a/style.scss
+++ b/style.scss
@@ -413,3 +413,15 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 /* My Account */
+
+/* Live Prices */
+
+.live_content_chart {
+  height: 600px;
+}
+
+#tradingview_real_time_chart {
+  height: 600px;
+}
+
+/* Live Prices */
