--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -464,11 +464,11 @@ h4 {
   background-image: url("../images/icon/copy.svg");
 }
 
-.icon-dollar:before {
+.icon-USD:before {
   background-image: url("../images/icon/dollar.svg");
 }
 
-.icon-euro:before {
+.icon-EUR:before {
   background-image: url("../images/icon/euro.svg");
 }
 
@@ -480,7 +480,7 @@ h4 {
   background-image: url("../images/icon/faq_arrow.svg");
 }
 
-.icon-fpound:before {
+.icon-GBP:before {
   background-image: url("../images/icon/fpound.svg");
 }
 
