--- a/style.css
+++ b/style.css
@@ -407,5 +407,11 @@ input[type=checkbox], input[type=radio] {
 }
 
 /* Live Prices */
+/* Search */
+.post_types_title {
+  margin-top: 50px;
+}
+
+/* Search */
 
 /*# sourceMappingURL=style.css.map */
