--- a/style.scss
+++ b/style.scss
@@ -425,3 +425,11 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 /* Live Prices */
+
+/* Search */
+
+.post_types_title {
+  margin-top: 50px;
+}
+
+/* Search */
