--- a/style.scss
+++ b/style.scss
@@ -433,3 +433,12 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 /* Search */
+
+.woocommerce-notices-wrapper {
+  width: 100%;
+  max-width: calc(var(--bone_w) + var(--bone) * 2);
+  margin: 0 auto;
+  padding: 15px var(--bone);
+  font-size: 1.3em;
+  font-family: var(--font2);
+}
