silver prices with VAT

--- a/style.css
+++ b/style.css
@@ -167,10 +167,15 @@ input[type=checkbox], input[type=radio] {
 /* Single Product */
 .price_wrapper {
   color: #969797;
+  font-size: 14px;
 }
 
 .price_wrapper .price {
   display: inline-block;
+}
+
+.price {
+  font-size: 18px;
 }
 
 /* Single Product */
