--- a/style.css
+++ b/style.css
@@ -164,6 +164,72 @@ input[type=checkbox], input[type=radio] {
   text-transform: uppercase;
 }
 
+.buy_content_item_info {
+  --icon_size: 14px;
+  --color: #525252;
+  position: absolute;
+  left: 10px;
+  padding: 10px 24px 0 20px;
+  line-height: 1;
+  z-index: 1;
+}
+
+.buy_content_item_info:before {
+  left: 0;
+  transform: translate3d(0, 6px, 0px);
+}
+
+.buy_content_item_info:after {
+  --icon_size: 18px;
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: var(--icon_size);
+  height: var(--icon_size);
+  margin-top: calc(var(--icon_size) / -2);
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 17.2174C13.5383 17.2174 17.2174 13.5383 17.2174 9C17.2174 4.46166 13.5383 0.782609 9 0.782609C4.46166 0.782609 0.782609 4.46166 0.782609 9C0.782609 13.5383 4.46166 17.2174 9 17.2174ZM9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z' fill='%23D0B36F'/%3E%3Cpath d='M10.2303 13.3233H10.005C9.89643 13.3233 9.742 13.3191 9.54165 13.3108C9.3413 13.2941 9.17017 13.2857 9.02826 13.2857C8.88635 13.2857 8.71522 13.2941 8.51487 13.3108C8.31452 13.3191 8.16426 13.3233 8.06408 13.3233H7.82617V13.2356H7.85122C8.12669 13.2356 8.30617 13.1897 8.38965 13.0979C8.47313 13.0061 8.51487 12.8224 8.51487 12.5469V8.37719C8.51487 8.11006 8.47313 7.93058 8.38965 7.83876C8.30617 7.74693 8.12669 7.70102 7.85122 7.70102H7.82617V7.60084H7.97643C8.27695 7.60084 8.58165 7.55076 8.89052 7.45058C9.20774 7.34206 9.39974 7.21684 9.46652 7.07493H9.54165V12.5469C9.54165 12.8224 9.58339 13.0061 9.66687 13.0979C9.75035 13.1897 9.934 13.2356 10.2178 13.2356H10.2303V13.3233ZM9.01574 6.03563C8.83208 6.03563 8.67348 5.97302 8.53991 5.8478C8.41469 5.72258 8.35208 5.56397 8.35208 5.37197C8.35208 5.17163 8.41469 5.00884 8.53991 4.88363C8.67348 4.75841 8.83208 4.6958 9.01574 4.6958C9.20774 4.6958 9.37052 4.75841 9.50408 4.88363C9.63765 5.00884 9.70443 5.17163 9.70443 5.37197C9.70443 5.56397 9.63765 5.72258 9.50408 5.8478C9.37052 5.97302 9.20774 6.03563 9.01574 6.03563Z' fill='%23D0B36F'/%3E%3C/svg%3E%0A");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transform: translate3d(0, 6px, 0px);
+}
+
+.buy_content_item_info p {
+  visibility: hidden;
+  position: absolute;
+  right: 0;
+  width: 220px;
+  padding: 10px;
+  color: #FAFAFA;
+  bottom: calc(100% + 10px);
+  background-color: #1E1B1A;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  opacity: 0;
+  transition: all 0.43s;
+}
+
+.buy_content_item_info:hover p {
+  visibility: visible;
+  opacity: 1;
+}
+
+.in-stock:before {
+  background-image: url("assets/images/icon/i_ok.svg");
+}
+
+.out-of-stock:before {
+  background-image: url("assets/images/icon/i_close.svg");
+}
+
+.available-on-backorder:before {
+  background-image: url("assets/images/icon/i_refresh.svg");
+}
+
+.awaiting-stock:before {
+  background-image: url("assets/images/icon/i_time.svg");
+}
+
 /* Single Product */
 .price_wrapper {
   color: #969797;
