fixing logo with home url

--- a/style.scss
+++ b/style.scss
@@ -83,6 +83,15 @@ input[type="checkbox"], input[type="radio"] {
 
 /* CLASSES WHAT NEED TO BE CHANGED */
 
+/* Header */
+
+.header_logo_link {
+  width: 220px;
+  height: 104px;
+}
+
+/* Header */
+
 /* Buy. */
 /* Buy_content. */
 
