--- a/style.css
+++ b/style.css
@@ -80,6 +80,13 @@ input[type=checkbox], input[type=radio] {
 }
 
 /* CLASSES WHAT NEED TO BE CHANGED */
+/* Header */
+.header_logo_link {
+  width: 220px;
+  height: 104px;
+}
+
+/* Header */
 /* Buy. */
 /* Buy_content. */
 .buy_top,
