--- a/style.css
+++ b/style.css
@@ -518,9 +518,11 @@ input[type=checkbox], input[type=radio] {
   width: 100%;
   max-width: calc(var(--bone_w) + var(--bone) * 2);
   margin: 0 auto;
-  padding: 15px var(--bone);
   font-size: 1.3em;
   font-family: var(--font2);
+}
+.woocommerce-notices-wrapper .woocommerce-message {
+  padding: 15px var(--bone);
 }
 
 /*# sourceMappingURL=style.css.map */
