--- a/style.scss
+++ b/style.scss
@@ -164,8 +164,17 @@ input[type="checkbox"], input[type="radio"] {
   border-bottom: 2px solid var(--color);
 }
 
-.buy_name_right .product_title {
-  font-size: 36px;
+.buy_name_right {
+  .product_title {
+    font-size: 36px;
+    padding-right: 100px;
+  }
+  .buy_content_item_info {
+    position: absolute;
+    top: 44px;
+    left: auto;
+    right: 0;
+  }
 }
 
 .buy_name_drops li table th {
@@ -387,6 +396,15 @@ input[type="checkbox"], input[type="radio"] {
 
 .checkout #place_order {
   display: none;
+}
+
+.woocommerce-order-pay {
+  .checkout #place_order {
+    display: block;
+    cursor: pointer;
+    color: #000;
+    margin-top: 25px;
+  }
 }
 
 .select2-container .select2-selection--single {
